<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AutoControlSwitch" Id="{dab5a2aa-b659-43b5-b399-d0d5c3a7edcf}">
    <Declaration><![CDATA[TYPE ST_AutoControlSwitch :
STRUCT
	bExecute: BOOL;
	bDone: BOOL;
	bError: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>