<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="gHMI" Id="{1a90970f-9fe3-4704-bc53-ecbc2633db0d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'OPC.UA.DA' := '1'}
	stTankPumpCtrl: ST_HmiControl;
	
	{attribute 'OPC.UA.DA' := '1'}
	bReset: BOOL;
	
	{attribute 'OPC.UA.DA' := '1'}
	nMode: USINT;
	
	{attribute 'OPC.UA.DA' := '1'}
	bEnableSimulation: BOOL;	
	
	{attribute 'OPC.UA.DA':='1'}
	{attribute 'OPC.UA.DA.Access':='1'}
	rTankVolume: REAL;
	
	{attribute 'OPC.UA.DA':='1'}
	{attribute 'OPC.UA.DA.Access':='1'}
	rConsumptionRate: REAL;
	
	{attribute 'OPC.UA.DA':='1'}
	{attribute 'OPC.UA.DA.Access':='1'}
	nAlarmBits: DWORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>